--- a/themes/ceva24/style.css
+++ b/themes/ceva24/style.css
@@ -166,6 +166,26 @@ html .woosw-btn:hover::before {color: #fff; animation: shadow-pulse 1s infinite;
 
 /*Woocommerce*/
 
+/*DEZEMBRO 2021*/
+html .page-template-default.page.page-id-8 .woocommerce #order_review table.shop_table tbody td.product-name {
+    max-width: 100%;
+    text-align: left;
+    width: 100%;
+    display: flex;
+    position: relative;
+}
+/*html .page-template-default.page.page-id-8 .woocommerce #order_review table.shop_table tfoot th {
+    font-weight: 600;
+    width: 14%;
+}*/
+
+html .page-template-default.page.page-id-8 .product-total {
+    width: 10%;
+}
+
+
+
+
 
 /*preço pagina do produto*/
 .woocommerce div.product p.price, .woocommerce div.product span.price {color: #1c1d1e;}
